chore: adds api to update project member role
