# swagger.json
@@ -485,6 +485,44 @@
         }
       }
     },
+    "/api/project/{id}/members/{memberId}": {
+      "patch": {
+        "summary": "Update Project Member Role",
+        "description": "Update Project Member Role",
+        "produces": ["application/json"],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "description": "Update Project Member Role",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "role": {
+                  "type": "string",
+                  "enum": ["manager,worker"]
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "$ref": "#/definitions/projectMemberResponse"
+            }
+          },
+          "400": {
+            "description": "Invalid status value",
+            "schema": {
+              "$ref": "#/definitions/InvalidResponse"
+            }
+          }
+        }
+      }
+    },
     "/api/project/{projectId}/members/{memberId}": {
       "delete": {
         "summary": "Delete Project Member",
